# synthetic-data-demo

./: .gitignore  pyproject.toml
synthetic_data_demo/: use_evaluator.py  use_generator.py  use_share_process.py  use_shared_postprocess.py  use_shared_process.py
