[tool.poetry]
name = "synthetic-data-demo"
version = "0.1.0"
description = ""
authors = ["Riccardo Pala <riccardo.pietro.pala@gmail.com>"]
readme = "README.md"
packages = [{include = "synthetic_data_demo"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
